# bevy-visualizer

./: Cargo.toml  README.md  index.html
.github/workflows/: build.yml  wasm.yml
assets/shaders/: enhanced_audio_visualizer.wgsl  haxor.wgsl
docs/: bevy_visualizer.d.ts  bevy_visualizer.js  bevy_visualizer_bg.wasm  bevy_visualizer_bg.wasm.d.ts  index.html
docs/assets/shaders/: haxor.wgsl
src/: main.rs
