[package]
name = "bevy_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_ascii_terminal = "0.13.0"
bevy_asset = "0.11.3"
bevy_audio = "0.11.3"
bevy_ecs = "0.11.3"
bevy_egui = "0.22.0"
bevy_embedded_assets = "0.8.0"
bevy_fundsp = "0.4.0"
rand = "0.8.5"
uuid = "1.4.1"

# from https://bevy-cheatbook.github.io/pitfalls/performance.html
# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
