[package]
name = "bevy_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.17.3"
bevy_egui = "0.38.1"
bevy_embedded_assets = "0.14.0"
bevy_fundsp = { git = "https://github.com/funatsufumiya/bevy_fundsp", branch = "main", features = ["bevy_audio"] }
fundsp = "0.20.0"
num-complex = "0.4.4"
rand = "0.8.5"
rustfft = "6.1.0"
uuid = "1.4.1"
hound = "3.5.1"
getrandom = { version = "0.2.16", features = ["js"] }
console_error_panic_hook = "0.1.7"

# from https://bevy-cheatbook.github.io/pitfalls/performance.html
# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
